--- a/css/calculadora.css
+++ b/css/calculadora.css
@@ -37,21 +37,6 @@ body{
   align-items: space-around;
 }
 
-#pantalla{
-  width: 100%;
-  height: 78px;
-  background-color: white;
-  border: solid 1px lightgray;
-  border-radius: 6px;
-  -webkit-box-shadow: 1px 1px 1px 1px rgba(235,232,235,1);
-  -moz-box-shadow: 1px 1px 1px 1px rgba(235,232,235,1);
-  box-shadow: 1px 1px 1px 1px rgba(235,232,235,1);
-  padding-right: 10px;
-  display:flex;
-  justify-content: flex-end;
-  align-items: center; 
-}
-
 .tecla{
   width: 66px;
   height: 66px;
@@ -65,17 +50,40 @@ body{
   font-size: 18px;
 }
 
-.mouse_over{
+.tecla:hover {
   -webkit-box-shadow: 1px 1px 1px 1px rgba(235,232,235,1);
--moz-box-shadow: 1px 1px 1px 1px rgba(235,232,235,1);
-box-shadow: 1px 1px 1px 1px rgba(235,232,235,1);
-background: rgba(252,255,255,1);
-background: -moz-linear-gradient(left, rgba(252,255,255,1) 0%, rgba(153,208,250,0.75) 100%);
-background: -webkit-gradient(left top, right top, color-stop(0%, rgba(252,255,255,1)), color-stop(100%, rgba(153,208,250,0.75)));
-background: -webkit-linear-gradient(left, rgba(252,255,255,1) 0%, rgba(153,208,250,0.75) 100%);
-background: -o-linear-gradient(left, rgba(252,255,255,1) 0%, rgba(153,208,250,0.75) 100%);
-background: -ms-linear-gradient(left, rgba(252,255,255,1) 0%, rgba(153,208,250,0.75) 100%);
-background: linear-gradient(to right, rgba(252,255,255,1) 0%, rgba(153,208,250,0.75) 100%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcffff', endColorstr='#99d0fa', GradientType=1 );
-color:white
+  -moz-box-shadow: 1px 1px 1px 1px rgba(235,232,235,1);
+  box-shadow: 1px 1px 1px 1px rgba(235,232,235,1);
+  background: rgba(252,255,255,1);
+  background: -moz-linear-gradient(45deg, rgba(252,255,255,1) 0%, rgba(210,233,250,0.75) 100%);
+  background: -webkit-gradient(left bottom, right top, color-stop(0%, rgba(252,255,255,1)), color-stop(100%, rgba(210,233,250,0.75)));
+  background: -webkit-linear-gradient(45deg, rgba(252,255,255,1) 0%, rgba(210,233,250,0.75) 100%);
+  background: -o-linear-gradient(45deg, rgba(252,255,255,1) 0%, rgba(210,233,250,0.75) 100%);
+  background: -ms-linear-gradient(45deg, rgba(252,255,255,1) 0%, rgba(210,233,250,0.75) 100%);
+  background: linear-gradient(45deg, rgba(252,255,255,1) 0%, rgba(210,233,250,0.75) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcffff', endColorstr='#d2e9fa', GradientType=1 );
+}
+
+
+#pantalla{
+  width: 277px;
+  height: 78px;
+  background-color: white;
+  border: solid 1px lightgray;
+  border-radius: 6px;
+  -webkit-box-shadow: 1px 1px 1px 1px rgba(235,232,235,1);
+  -moz-box-shadow: 1px 1px 1px 1px rgba(235,232,235,1);
+  box-shadow: 1px 1px 1px 1px rgba(235,232,235,1);
+  padding-right: 10px;
+  display:flex;
+  justify-content: flex-end;
+  align-items: center; 
+}
+
+
+#pantalla:hover{
+
+  background: white;
+  border: solid 1px lightgray;
+
 }
