--- a/css/calculadora.css
+++ b/css/calculadora.css
@@ -62,6 +62,7 @@ body{
   background: -ms-linear-gradient(45deg, rgba(252,255,255,1) 0%, rgba(210,233,250,0.75) 100%);
   background: linear-gradient(45deg, rgba(252,255,255,1) 0%, rgba(210,233,250,0.75) 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcffff', endColorstr='#d2e9fa', GradientType=1 );
+  cursor: pointer
 }
 
 
